--- a/style.css
+++ b/style.css
@@ -1,3 +1,103 @@
+
+
+
 #header{
     color: brown;
 }
+.header{
+    
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    border-bottom: 1px solid black;
+}
+.h-list{
+    display: flex;
+    align-items: center;
+    padding-right: 50px;
+    
+    
+}
+
+.h-list > li {
+    list-style-type: none;
+    padding: 0 50px;
+    font-size: 24px ;
+    font-style: italic;
+}
+
+.h-list > li > a{
+
+   
+    text-decoration: none;
+    color: rgb(6, 3, 3);
+   
+}
+.swiggy-logo{
+    width: 150px;
+    height:50px;
+    padding-left: 50px;
+   padding-top: 5px;
+}
+.search-container {
+    display: flex;
+    align-items: center;
+    padding-right: 50px;
+  }
+  
+  .search-container input[type="text"] {
+    padding: 6px;
+    border: none;
+    border-radius: 4px 0 0 4px;
+    outline: none;
+  }
+  
+  .search-container button {
+    padding: 6px 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 0 4px 4px 0;
+    cursor: pointer;
+  }
+  
+  .search-container button:hover {
+    background-color: #45a049;
+  }
+h2{
+  font-size: 30px;
+  padding-left: 50px;
+  font-style: italic;
+  padding-top: 10px;
+}
+  .cards-container{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px;
+    justify-content: space-evenly;
+    
+  }
+.card{
+    width: 20%;
+    border :1px solid black;
+    border-radius: 12px;
+    height: 30%;
+    margin-top: 20px;
+   
+}
+.card:hover{
+  box-shadow: 5px 5px 5px rgb(53, 49, 49);
+  transform: scale(1.02);
+  transition: 0.5s;
+
+}
+
+
+.c-image{
+  width: 100%;
+  border-top-right-radius: 11px;
+  border-top-left-radius: 11px;
+ 
+ 
+}
+
