--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ h2{
     width: 20%;
     border :1px solid black;
     border-radius: 12px;
-    height: 30%;
+    height: 20%;
     margin-top: 20px;
    
 }
@@ -95,9 +95,28 @@ h2{
 
 .c-image{
   width: 100%;
+  height: 100%;
   border-top-right-radius: 11px;
   border-top-left-radius: 11px;
  
  
 }
 
+.c-info{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 10px;
+  height: 100%;
+}
+
+.btn-rate {
+  padding: 10px 20px;
+  margin-top: 29px;
+  margin-left: 10px;
+  background-color: #45a049;
+  color: aliceblue;
+  font-size: 20px;
+  cursor: pointer;
+  border-radius: 12px;
+}
