--- a/style.css
+++ b/style.css
@@ -169,13 +169,15 @@ h2 {
   flex-wrap: wrap;
   padding: 10px;
   justify-content: space-evenly;
+  
 }
 .card {
-  width: 20%;
+  width: 300px;
   border: 1px solid black;
   border-radius: 12px;
-  height: 20%;
   margin-top: 20px;
+  height: 500px;
+  overflow: hidden;
 }
 .card:hover {
   box-shadow: 5px 5px 5px rgb(53, 49, 49);
@@ -185,7 +187,7 @@ h2 {
 
 .c-image {
   width: 100%;
-  height: 100%;
+  height: 300px;
   border-top-right-radius: 11px;
   border-top-left-radius: 11px;
 }
@@ -193,9 +195,8 @@ h2 {
 .c-info {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   padding: 10px;
-  height: 100%;
+  
 }
 
 .btn-rate {
@@ -213,3 +214,42 @@ h2 {
   justify-content: space-between;
   
 }
+
+
+.no-style-link{
+  text-decoration: none;
+  color: inherit;
+}
+.menu-img {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px;
+  justify-content: space-evenly;
+}
+
+.container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
+
+}
+.details-menu{
+  border: 1px solid #ccc;
+  width: 50%;
+  padding: 20px;
+  box-shadow: 5px 5px 5px rgb(53, 49, 49);
+  border-radius: 15px;
+}
+.menu-info{
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  
+}
+.list-menu{
+  font-size: 24px;
+  list-style-type: none;
+ 
+}
+
