--- a/style.css
+++ b/style.css
@@ -1,255 +1,5 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-
-#header {
-  color: brown;
-}
-.header {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 10px;
-  border-bottom: 1px solid black;
-}
-.h-list {
-  display: flex;
-  align-items: center;
-  padding-right: 50px;
-}
-
-.h-list > li {
-  list-style-type: none;
-  padding: 0 50px;
-  font-size: 24px;
-  font-style: italic;
-}
-
-.h-list > li > a {
-  text-decoration: none;
-  color: rgb(6, 3, 3);
-}
-
-.login-button{
-  padding: 0 20px;
-  height: 50px;
-  background-color: #45a049;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 20px;
-  color: black;
-  margin-left: 300px;
-}
-.login-button:active{
-  background-color: #ddd;
-}
-.swiggy-logo {
-  width: 150px;
-  height: 50px;
-  padding-left: 50px;
-  padding-top: 5px;
-}
-.search-container {
-  display: flex;
-  align-items: center;
-  padding-right: 50px;
-  margin-top: 29px;
-}
-
-.search-container input[type="text"] {
-  padding: 6px;
-  border: 1px solid #ddd;
-  border-radius: 4px 0 0 4px;
-  outline: none;
-  font-size: 20px;
-}
-
-.search-container button {
-  padding: 6px 10px;
-  background-color: #4caf50;
-  color: white;
-  border: none;
-  font-size: 20px;
-  border-radius: 0 4px 4px 0;
-  cursor: pointer;
-
-}
-
-.search-container button:hover {
-  background-color: #45a049;
-}
-/* ShimmerCard.css */
-
-.shimmer-button{
- 
-  border: 1px solid #ddd;
-  background-color: #fff;
-  padding: 10px 20px;
-  margin-top: 29px;
-  margin-left: 10px;
-  border-radius: 12px;
-}
-.shimmer-title{
-  font-size: 30px;
-  padding-left: 50px;
-  font-style: italic;
-  padding-top: 10px;
-  margin-left: 20px;
-}
-
-
-.shimmer-cardcontainer {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.shimmer-card {
-  
-  margin-left: 80px;
-  background-color: #fff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  width: 18%;
-  border-radius: 12px;
-  height: 20%;
-  margin-top: 65px;
-}
-
-.shimmer {
-  background: linear-gradient(
-    to right,
-    #f0f0f0 0%,
-    #e0e0e0 20%,
-    #f0f0f0 40%,
-    #f0f0f0 100%
-  );
-  background-size: 200% 100%;
-  animation: shimmer 1.5s infinite linear;
-  border-radius: 4px;
-}
-
-@keyframes shimmer {
-  0% {
-    background-position: -200% 0;
-  }
-  100% {
-    background-position: 200% 0;
-  }
-}
-
-.shimmer-image {
-  width: 100%;
-  height: 350px;
-  margin-bottom: 12px;
-}
-
-.shimmer-title {
-  width: 70%;
-  height: 20px;
-  margin-top: 30px;
-  margin-bottom: 20px;
-}
-
-.shimmer-rating {
-  width: 30%;
-  height: 15px;
-  margin-bottom: 20px;
-}
-
-.shimmer-description {
-  width: 90%;
-  height: 15px;
-  margin-bottom: 30px;
-}
-
-h2 {
-  font-size: 30px;
-  padding-left: 50px;
-  font-style: italic;
-  padding-top: 10px;
-}
-.cards-container {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 10px;
-  justify-content: space-evenly;
-  
-}
-.card {
-  width: 300px;
-  border: 1px solid black;
-  border-radius: 12px;
-  margin-top: 20px;
-  height: 500px;
-  overflow: hidden;
-}
-.card:hover {
-  box-shadow: 5px 5px 5px rgb(53, 49, 49);
-  transform: scale(1.02);
-  transition: 0.5s;
-}
-
-.c-image {
-  width: 100%;
-  height: 300px;
-  border-top-right-radius: 11px;
-  border-top-left-radius: 11px;
-}
-
-.c-info {
-  display: flex;
-  flex-direction: column;
-  padding: 10px;
-  
-}
-
-.btn-rate {
-  padding: 5px 20px;
-  margin-top: 29px;
-  margin-left: 10px;
-  background-color: #45a049;
-  color: aliceblue;
-  font-size: 20px;
-  cursor: pointer;
-  border-radius: 4px;
-}
-.filter{
-  display: flex;
-  justify-content: space-between;
-  
-}
-
-
-.no-style-link{
-  text-decoration: none;
-  color: inherit;
-}
-.menu-img {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 10px;
-  justify-content: space-evenly;
-}
-
-.container{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 50px;
-
-}
-.details-menu{
-  border: 1px solid #ccc;
-  width: 50%;
-  padding: 20px;
-  box-shadow: 5px 5px 5px rgb(53, 49, 49);
-  border-radius: 15px;
-}
-.menu-info{
-  display: flex;
-  flex-direction: column;
-  margin-top: 10px;
-  
-}
-.list-menu{
-  font-size: 24px;
-  list-style-type: none;
- 
-}
 
